--- a/templates/base.html
+++ b/templates/base.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
-        <link
-            rel="stylesheet"
-            type="text/css"
-            href="{{ url_for('static', filename='bootstrap.min.css') }}"
-        />
-        <link
-            rel="stylesheet"
-            type="text/css"
-            href="{{ url_for('static', filename='my_styles.css') }}"
-        />
-        <title>{% block title %}{% endblock %}</title>
-    </head>
-    <body>
-        <!-- 부트스트랩 내비게이션 -->
-        {% include "navbar.html" %} {% block content %}
-        <div class="container my-3">
-            <!-- flash -->
-            {% for message in get_flashed_messages() %}
-            <div class="alert alert-info">{{ message }}</div>
-            {% endfor %}
-            <!-- 각 페이지의 내용 -->
-            {% block page_content %} {% endblock %}
-        </div>
-        {% endblock %}
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <title>{% block title %}{% endblock %}</title>
+</head>
+
+<body>
+    <!-- 부트스트랩 내비게이션 -->
+    {% include "navbar.html" %} {% block content %}
+    <div class="container my-3">
+        <!-- flash -->
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-info">{{ message }}</div>
+        {% endfor %}
+        <!-- 각 페이지의 내용 -->
+        {% block page_content %} {% endblock %}
+    </div>
+    {% endblock %}
+</body>
+
 </html>
