--- a/templates/main.html
+++ b/templates/main.html
@@ -14,7 +14,9 @@
                     height="200px"
                 />
                 <div class="card-body">
-                    <h5 class="card-title">{{ book.book_name }}</h5>
+                    <a href="{{ url_for('main.book_detail',book_id=book.id) }}" style="text-decoration:none; color:black;">
+                        <h5 class="card-title">{{ book.book_name }}</h5>
+                    </a>
                     <a href="#" class="btn btn-primary">대출하기</a>
                 </div>
             </div>
