--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 <form action="{{ url_for('main.register') }}" method="post">
     <div class="form-group">
         <label>아이디(이메일)
-            <input type="email" name="user_id" class="form-control" id="user_id" placeholer="아이디(이메일) 입력" /></label>
+            <input type="email" name="user_id" class="form-control"  placeholer="아이디(이메일) 입력" /></label>
     </div>
     <div class="form-group">
         <label>비밀번호
@@ -17,7 +17,7 @@
     </div>
     <div class="form-group">
         <label>닉네임
-            <input type="nickname" name="nickname" class="form-control" placeholder="닉네임 입력" />닉네임</label>
+            <input type="nickname" name="nickname" class="form-control" placeholder="닉네임 입력" /></label>
     </div>
     <div class="form-group">
         <label>주소
