--- a/templates/detail.html
+++ b/templates/detail.html
@@ -3,84 +3,89 @@
 
 {% block page_content %}
 <div class='container'>
-    <div class='row'>
-        <div class='col-4'>
+    <div class='row justify-content-center'>
+        <div class='col align-self-center'>
             <img src="{{ url_for('static',filename='/book_img/{}.jpg'.format(book.id)) }}" alt="None"
                 class="img-thumbnail">
         </div>
-        <div class='col-8'>
-            <div class='row'>
-                <div class='col-8'>
-                    <ul class='list-group'>
-                        <li class='list-group-item'>
-                            <p>제목 : {{ book.book_name }}</p>
-                        </li>
-                        <li class='list-group-item'>
-                            <p>저자 : {{ book.author }}</p>
-                        </li>
-                        <li class='list-group-item'>
-                            <p>출판사 : {{ book.publisher }}</p>
-                        </li>
-                        <li class='list-group-item'>
-                            <p>출판 날짜 : {{ book.publication_date }}</p>
-                        </li>
-                        <li class='list-group-item'>
-                            <p>페이지 수 : {{ book.pages }}</p>
-                        </li>
-                        <li class='list-group-item'>
-                            <p>ISBN : {{ book.isbn }}</p>
-                        </li>
-                        <li class='list-group-item'>
-                            <a href="{{ book.link }}" target='_blank'>링크</a>
-                        </li>
-                        <li class='list-group-item'>
-                            <form action="{{ url_for('main.rental_click', book_id=book.id) }}" method='post'>
-                                <p>5권 중 {{ book.remain }}권 이용 가능</p>
-                                <input class="btn btn-primary" type="submit" value="대출하기">
-                            </form>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <div class='col align-self-center'>
+            <ul class='list-group'>
+                <li class='list-group-item'>
+                    <p>제목 : {{ book.book_name }}</p>
+                </li>
+                <li class='list-group-item'>
+                    <p>저자 : {{ book.author }}</p>
+                </li>
+                <li class='list-group-item'>
+                    <p>출판사 : {{ book.publisher }}</p>
+                </li>
+                <li class='list-group-item'>
+                    <p>출판 날짜 : {{ book.publication_date }}</p>
+                </li>
+                <li class='list-group-item'>
+                    <p>페이지 수 : {{ book.pages }}</p>
+                </li>
+                <li class='list-group-item'>
+                    <p>ISBN : {{ book.isbn }}</p>
+                </li>
+                <li class='list-group-item'>
+                    <a href="{{ book.link }}" target='_blank'>링크</a>
+                </li>
+                <li class='list-group-item'>
+                    <form action="{{ url_for('main.rental_click', book_id=book.id) }}" method='post'>
+                        <p>5권 중 {{ book.remain }}권 이용 가능</p>
+                        <input class="btn btn-primary" type="submit" value="대출하기">
+                    </form>
+                </li>
+            </ul>
         </div>
-        <div class='col-9'>
-            <div class='card' style='padding: 10px;'>
-                {{ book.description }}
-            </div>
-        </div>
-        <div class='col-9' style='margin:10px;'>
-            <h4>리뷰 (평점 : {{ avg }}/5.0)</h4>
-            {% for review in reviews %}
+        <div class='row justify-content-center'>
+            <div class='col align-self-start'>
                 <div class='card' style='padding: 10px;'>
-                    <p>{{ review.nickname }}({{ review.rating }}) : {{review.content }}</p>
-                    {% if review.user_id == session['login'] %}
-                        <a class="btn btn-danger" href="{{ url_for('main.review_delete', review_id=review.id) }}">삭제하기</a>
-                    {% endif %}
+                    {{ book.description }}
                 </div>
-            {% endfor %}
-        </div>
-        {% if session['login'] %}
-        <div class='col-9' style='margin:10px;'>
-            <h4>리뷰 작성</h4>
-            <div class='card'>
-                <form action="{{ url_for('main.review_update',book_id=book.id) }}" method='post'>
-                    <select name="star">
-                        <option value="1">1점</option>
-                        <option value="2">2점</option>
-                        <option value="3">3점</option>
-                        <option value="4">4점</option>
-                        <option value="5">5점</option>
-                    </select>
-                    <div class='form-group'>
-                        <input class='form-control' name='content' placeholder="내용을 입력하세요.">
-                    </div>
-                    <input type="submit" class='btn btn-primary' value='작성하기'>
-                </form>
             </div>
         </div>
-        {% endif %}
-
     </div>
+</div>
 
 </div>
+
+<div class='container'>
+    <div class='col-9' style='margin:10px;'>
+        <h4>리뷰 (평점 : {{ avg }}/5.0)</h4>
+        {% for review in reviews %}
+        <div class='card' style='padding: 10px;'>
+            <div class='card-body'>
+                <h5 class="card-title">{{ review.nickname }}({{ review.rating }})</h5>
+                <p class="card-text">{{review.content }}</p>
+                {% if review.user_id == session['login'] %}
+                <a href="{{ url_for('main.review_delete', review_id=review.id) }}" class="btn btn-danger">삭제하기</a>
+                {% endif %}
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    {% if session['login'] %}
+    <div class='col-9' style='margin:10px;'>
+        <h4>리뷰 작성</h4>
+        <div class='card'>
+            <form action="{{ url_for('main.review_update',book_id=book.id) }}" method='post'>
+                <select name="star">
+                    <option value="1">1점</option>
+                    <option value="2">2점</option>
+                    <option value="3">3점</option>
+                    <option value="4">4점</option>
+                    <option value="5">5점</option>
+                </select>
+                <div class='form-group'>
+                    <textarea class='form-control' name='content' placeholder="내용을 입력하세요." rows=3 required></textarea>
+                </div>
+                <input type="submit" class='btn btn-primary' value='작성하기'>
+            </form>
+        </div>
+    </div>
+</div>
+{% endif %}
+
 {% endblock %}
