--- a/templates/register.html
+++ b/templates/register.html
@@ -5,27 +5,27 @@
 <form action="{{ url_for('main.register') }}" method="post">
     <div class="form-group">
         <label>아이디(이메일)
-            <input type="email" name="user_id" class="form-control"  placeholer="아이디(이메일) 입력" /></label>
+            <input type="email" name="user_id" class="form-control"  placeholer="아이디(이메일) 입력" required/></label>
     </div>
     <div class="form-group">
         <label>비밀번호
-            <input type="password" name="user_pw" class="form-control" placeholder="비밀번호 입력" /></label>
+            <input type="password" name="user_pw" class="form-control" placeholder="비밀번호 입력" required/></label>
     </div>
     <div class="form-group">
         <label>비밀번호 재확인
-            <input type="password" name="user_pw2" class="form-control" placeholder="비밀번호 재확인" /></label>
+            <input type="password" name="user_pw2" class="form-control" placeholder="비밀번호 재확인" required/></label>
     </div>
     <div class="form-group">
         <label>닉네임
-            <input type="nickname" name="nickname" class="form-control" placeholder="닉네임 입력" /></label>
+            <input type="nickname" name="nickname" class="form-control" placeholder="닉네임 입력" required/></label>
     </div>
     <div class="form-group">
         <label>주소
-            <input type="text" name="address" class="form-control" placeholder="주소 입력" /></label>
+            <input type="text" name="address" class="form-control" placeholder="주소 입력" required /></label>
     </div>
     <div class="form-group">
         <label>전화번호
-            <input type="tel" name="telephone" class="form-control" placeholder="전화번호 입력" /></label>
+            <input type="tel" name="telephone" class="form-control" placeholder="전화번호 입력" required/></label>
     </div>
     <input class="btn btn-primary" type="submit" value="회원가입" />
 </form>
