--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,8 @@
 
 <body>
     <!-- 부트스트랩 내비게이션 -->
-    {% include "navbar.html" %} {% block content %}
+    {% include "navbar.html" %}
+    {% block content %}
     <div class="container my-3">
         <!-- flash -->
         {% for message in get_flashed_messages() %}
@@ -24,6 +25,27 @@
         {% block page_content %} {% endblock %}
     </div>
     {% endblock %}
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (function () {
+            'use strict'
+
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.querySelectorAll('.needs-validation')
+
+            // Loop over them and prevent submission
+            Array.prototype.slice.call(forms)
+                .forEach(function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (!form.checkValidity()) {
+                            event.preventDefault()
+                            event.stopPropagation()
+                        }
+                        form.classList.add('was-validated')
+                    }, false)
+                })
+        })()
+    </script>
 </body>
 
 </html>
