--- a/templates/login.html
+++ b/templates/login.html
@@ -5,12 +5,12 @@
 <form action="{{ url_for('main.login') }}" method='post'>
     <div class="form-group">
         <label>아이디(이메일)
-            <input type="email" name="user_id" class="form-control" placeholder="아이디(이메일) 입력">
+            <input type="email" name="user_id" class="form-control" placeholder="아이디(이메일) 입력" required>
         </label>
     </div>
     <div class="form-group">
         <label>비밀번호
-            <input type="password" name="user_pw" class="form-control" placeholder="비밀번호 입력">
+            <input type="password" name="user_pw" class="form-control" placeholder="비밀번호 입력" required>
         </label>
     </div>
     <input class="btn btn-primary" type="submit" value="로그인">
