--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 <form action="{{ url_for('main.register') }}" method="post">
     <div class="form-group">
         <label>아이디(이메일)
-            <input type="email" name="user_id" class="form-control"  placeholer="아이디(이메일) 입력" required/></label>
+            <input type="email" name="user_id" class="form-control"  placeholer={{ user_id }} required/></label>
     </div>
     <div class="form-group">
         <label>비밀번호
