--- a/templates/detail.html
+++ b/templates/detail.html
@@ -34,7 +34,15 @@
                 <li class='list-group-item'>
                     <form action="{{ url_for('main.rental_click', book_id=book.id) }}" method='post'>
                         <p>5권 중 {{ book.remain }}권 이용 가능</p>
-                        <input class="btn btn-primary" type="submit" onclick="return confirm('대출하시겠습니까?');" value="대출하기">
+                        {% if session['login'] %}
+                        <input class="btn btn-primary" type="submit" onclick="return confirm('대출하시겠습니까?');"
+                            value="대출하기">
+                        {% elif book.remain == 0 %}
+                        <input class="btn btn-secondary" type="submit" value="대출하기" disabled>
+                        {% else %}
+                        <input class="btn btn-primary" type="submit" onclick="return confirm('로그인 후 사용 가능합니다. 로그인 하시겠습니까?');"
+                            value="대출하기">
+                        {% endif %}
                     </form>
                 </li>
             </ul>
@@ -47,27 +55,58 @@
             </div>
         </div>
     </div>
-</div>
 
-</div>
-
-<div class='container'>
-    <div class='col-9' style='margin:10px;'>
-        <h4>리뷰 (평점 : {{ avg }}/5.0)</h4>
-        {% for review in reviews %}
-        <div class='card' style='padding: 10px;'>
+    <div class="mt-3 d-flex justify-content-start align-items-center">
+        <h4>리뷰({{ count }})</h4>
+        <div class="ratings" style="margin-left: 15px;">
+            {% for i in range(5) %}
+                {% if i < book.star %} 
+                <i class="fa fa-star rating-color"></i>
+                {% else %}
+                <i class="fa fa-star"></i>
+                {% endif %}
+            {% endfor %}
+        </div>
+    </div>
+    <div class="mt-2 justify-content-start align-items-start">
+        {% if not reviews %}
+        <div class='card'>
             <div class='card-body'>
-                <h5 class="card-title">{{ review.nickname }}({{ review.rating }})</h5>
-                <p class="card-text">{{review.content }}</p>
+                <p class='card-text'>등록된 리뷰가 없습니다.</p>
+            </div>
+        </div>
+        {% endif %}
+        {% for review in reviews %}
+        <div class='mt-2 card' style='padding: 10px;'>
+            <div class='card-header d-flex justify-content-between align-items-center'>
+                <div class='d-flex justify-content-start align-items-center'>
+                    <h5>{{ review.nickname }}</h5>
+                    <div class="small-ratings" style="margin-left: 10px;">
+                        {% for i in range(5) %}
+                            {% if i < review.rating %}
+                            <i class="fa fa-star rating-color"></i>
+                            {% else %}
+                            <i class="fa fa-star"></i>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
                 {% if review.user_id == session['login'] %}
-                <a href="{{ url_for('main.review_delete', review_id=review.id) }}" class="btn btn-danger" onclick="return confirm('삭제하시겠습니까?');">삭제하기</a>
+                <a href="{{ url_for('main.review_delete', review_id=review.id) }}" class="btn btn-danger"
+                    onclick="return confirm('삭제하시겠습니까?');">삭제</a>
                 {% endif %}
             </div>
+            
+            <div class='card-body d-flex row justify-content-start align-items-center'>
+                <p class="card-text fs-6">{{review.content }}</p>
+                <p><small>{{ review.date }}</small></p>
+            </div>
+            
         </div>
         {% endfor %}
     </div>
     {% if session['login'] %}
-    <div class='col-9' style='margin:10px;'>
+    <div class="mt-5 justify-content-start align-items-start">
         <h4>리뷰 작성</h4>
         <div class='card'>
             <form action="{{ url_for('main.review_update',book_id=book.id) }}" method='post'>
@@ -81,7 +120,7 @@
                 <div class='form-group'>
                     <textarea class='form-control' name='content' placeholder="내용을 입력하세요." rows=3 required></textarea>
                 </div>
-                <input type="submit" class='btn btn-primary' value='작성하기'>
+                <input type="submit" class='mt-2 btn btn-primary' value='작성하기'>
             </form>
         </div>
     </div>
