--- a/templates/main.html
+++ b/templates/main.html
@@ -13,11 +13,22 @@
                     src="{{ url_for('static', filename='/book_img/{}.jpg'.format(book.id)) }}" 
                     height="200px"
                 />
-                <div class="card-body">
+                <div class="card-body d-flex align-content-between flex-wrap">
                     <a href="{{ url_for('main.book_detail',book_id=book.id) }}" style="text-decoration:none; color:black;">
                         <h5 class="card-title">{{ book.book_name }}</h5>
                     </a>
-                    <p>{{ book.remain }}권 남음</p>
+                    <div class='d-flex align-content-end'>
+                        <div class="ratings align-items-center">
+                            {% for i in range(5) %}
+                                {% if i < book.star %}
+                                <i class="fa fa-star rating-color"></i>
+                                {% else %}
+                                <i class="fa fa-star"></i>
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                        <p>{{ book.remain }}권 남음</p>
+                    </div>
                 </div>
             </div>
         </div>
