부트스트랩 적용 및 개선

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,33 +21,19 @@
     <div class="container my-3">
         <!-- flash -->
         {% for message in get_flashed_messages() %}
-        <div class="alert alert-info">{{ message }}</div>
+        <div class="alert alert-info alert-dismissible fade show" role="alert">{{ message }}<button type="button"
+                class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>
         {% endfor %}
         <!-- 각 페이지의 내용 -->
         {% block page_content %} {% endblock %}
     </div>
     {% endblock %}
-    <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (function () {
-            'use strict'
-
-            // Fetch all the forms we want to apply custom Bootstrap validation styles to
-            var forms = document.querySelectorAll('.needs-validation')
-
-            // Loop over them and prevent submission
-            Array.prototype.slice.call(forms)
-                .forEach(function (form) {
-                    form.addEventListener('submit', function (event) {
-                        if (!form.checkValidity()) {
-                            event.preventDefault()
-                            event.stopPropagation()
-                        }
-                        form.classList.add('was-validated')
-                    }, false)
-                })
-        })()
-    </script>
+    <footer class="text-center text-lg-start bg-light text-muted w-100" style="position : relative; bottom:0;">
+        <div class="text-center d-flex justify-content-center">
+            <p>Elice Libary:</p>
+            <p><small>Desiged By HyunHo</small></p>
+          </div>
+    </footer>
 </body>
 
 </html>
