--- a/templates/detail.html
+++ b/templates/detail.html
@@ -3,69 +3,58 @@
 
 {% block page_content %}
 <div class='container'>
-    <div class='row justify-content-start'>
-        <div class='col align-self-center'>
-            <img src="{{ url_for('static',filename='/book_img/{}.jpg'.format(book.id)) }}" alt="None"
-                class="img-thumbnail">
-        </div>
-        <div class='col align-self-center'>
-            <ul class='list-group'>
-                <li class='list-group-item'>
-                    <p>제목 : {{ book.book_name }}</p>
-                </li>
-                <li class='list-group-item'>
-                    <p>저자 : {{ book.author }}</p>
-                </li>
-                <li class='list-group-item'>
-                    <p>출판사 : {{ book.publisher }}</p>
-                </li>
-                <li class='list-group-item'>
-                    <p>출판 날짜 : {{ book.publication_date }}</p>
-                </li>
-                <li class='list-group-item'>
-                    <p>페이지 수 : {{ book.pages }}</p>
-                </li>
-                <li class='list-group-item'>
-                    <p>ISBN : {{ book.isbn }}</p>
-                </li>
-                <li class='list-group-item'>
-                    <a href="{{ book.link }}" target='_blank'>링크</a>
-                </li>
-                <li class='list-group-item'>
+    <div class="card mb-3">
+        <div class="row g-0">
+            <div class="col-md-4 border-end" style="width: 400px; height:400px;text-align:center;">
+                <img src="{{ url_for('static', filename='/book_img/{}.jpg'.format(book.id)) }}"
+                    class="img-fluid rounded-start" style="max-width:100%; max-height:100%;" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h4 class="card-title">{{ book.book_name }}</h4>
+                    <p class="card-text"><small class="text-muted">저자 : {{ book.author }}</small></p>
+                    <p class="card-text"><small class="text-muted">출판사 : {{ book.publisher }}</small></p>
+                    <p class="card-text"><small class="text-muted">출판 날짜 : {{ book.publication_date }}</small></p>
+                    <p class="card-text"><small class="text-muted">페이지 수 : {{ book.pages }}</small></p>
+                    <p class="card-text"><small class="text-muted">ISBN : {{ book.isbn }}</small></p>
+                    <p class="card-text"><small class="text-muted"><a href="{{ book.link }}"
+                                target='_blank'>링크</a></small></p>
                     <form action="{{ url_for('main.rental_click', book_id=book.id) }}" method='post'>
                         <p>5권 중 {{ book.remain }}권 이용 가능</p>
-                        {% if session['login'] %}
+                        {% if book.remain == 0 %}
+                        <input class="btn btn-secondary" type="submit" value="대출하기" disabled>
+                        {% elif session['login'] %}
                         <input class="btn btn-primary" type="submit" onclick="return confirm('대출하시겠습니까?');"
                             value="대출하기">
-                        {% elif book.remain == 0 %}
-                        <input class="btn btn-secondary" type="submit" value="대출하기" disabled>
                         {% else %}
-                        <input class="btn btn-primary" type="submit" onclick="return confirm('로그인 후 사용 가능합니다. 로그인 하시겠습니까?');"
-                            value="대출하기">
+                        <input class="btn btn-primary" type="submit"
+                            onclick="return confirm('로그인 후 사용 가능합니다. 로그인 하시겠습니까?');" value="대출하기">
                         {% endif %}
                     </form>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
-        <div class='row justify-content-center'>
-            <div class='col align-self-start'>
-                <div class='card' style='padding: 10px;'>
-                    {{ book.description }}
+    </div>
+    <div class="card mb-3">
+        <div class="row g-0">
+            <div class="col-md-12">
+                <div class="card-body">
+                    <p class="card-text"><small>{{ book.description }}</small></p>
                 </div>
             </div>
         </div>
     </div>
 
+
     <div class="mt-3 d-flex justify-content-start align-items-center">
         <h4>리뷰({{ count }})</h4>
         <div class="ratings" style="margin-left: 15px;">
             {% for i in range(5) %}
-                {% if i < book.star %} 
-                <i class="fa fa-star rating-color"></i>
+            {% if i < book.star %} <i class="fa fa-star rating-color"></i>
                 {% else %}
                 <i class="fa fa-star"></i>
                 {% endif %}
-            {% endfor %}
+                {% endfor %}
         </div>
     </div>
     <div class="mt-2 justify-content-start align-items-start">
@@ -83,12 +72,11 @@
                     <h5>{{ review.nickname }}</h5>
                     <div class="small-ratings" style="margin-left: 10px;">
                         {% for i in range(5) %}
-                            {% if i < review.rating %}
-                            <i class="fa fa-star rating-color"></i>
+                        {% if i < review.rating %} <i class="fa fa-star rating-color"></i>
                             {% else %}
                             <i class="fa fa-star"></i>
                             {% endif %}
-                        {% endfor %}
+                            {% endfor %}
                     </div>
                 </div>
                 {% if review.user_id == session['login'] %}
@@ -96,12 +84,12 @@
                     onclick="return confirm('삭제하시겠습니까?');">삭제</a>
                 {% endif %}
             </div>
-            
+
             <div class='card-body d-flex row justify-content-start align-items-center'>
                 <p class="card-text fs-6">{{review.content }}</p>
                 <p><small>{{ review.date }}</small></p>
             </div>
-            
+
         </div>
         {% endfor %}
     </div>
