--- a/templates/login.html
+++ b/templates/login.html
@@ -2,17 +2,23 @@
 {% block title %}로그인 페이지{% endblock %} 
 
 {% block page_content %}
-<form action="{{ url_for('main.login') }}" method='post'>
-    <div class="form-group">
-        <label>아이디(이메일)
-            <input type="email" name="user_id" class="form-control" placeholder="아이디(이메일) 입력" required>
-        </label>
+<div class="row container d-flex justify-content-center">
+    <div class="card" style="width:50%">
+        <h4 class='text-center mt-4'>로그인</h4>
+        <form action="{{ url_for('main.login') }}" method='post' class="row g-3 m-3">
+            <div class='col-9'>
+                <div class="form-floating">
+                    <input type="email" name="user_id" id="floatingInputId" class="form-control" placeholder="아이디 입력" required>
+                    <label for="floatingInputId">ID</label>
+                </div>
+                <div class="form-floating">
+                    <input type="password" name="user_pw" id="floatingInputPw" class="form-control" placeholder="비밀번호 입력" required>
+                    <label for="floatingInputPw">Password</label>
+                </div>
+            </div>
+            <div class='col-3 d-grid mx-auto'><button class="btn btn-primary btn-lg" type="submit">로그인</button></div>
+        </form>
     </div>
-    <div class="form-group">
-        <label>비밀번호
-            <input type="password" name="user_pw" class="form-control" placeholder="비밀번호 입력" required>
-        </label>
-    </div>
-    <input class="btn btn-primary" type="submit" value="로그인">
-</form>
+    <div class='text-center mt-3'><small>가입된 계정이 없으신가요? <a href="{{ url_for('main.register') }}">회원가입</a></small></div>
+</div>
 {% endblock %}
