--- a/templates/register.html
+++ b/templates/register.html
@@ -1,32 +1,52 @@
 {% extends "base.html" %}
-{% block title %}회원가입 페이지{% endblock %} 
+{% block title %}회원가입 페이지{% endblock %}
 
 {% block page_content %}
-<form action="{{ url_for('main.register') }}" method="post">
-    <div class="form-group">
-        <label>아이디(이메일)
-            <input type="email" name="user_id" class="form-control"  placeholer={{ user_id }} required/></label>
+<div class="row container d-flex justify-content-center">
+    <div class="card" style="width:50%">
+        <h4 class='text-center mt-4'>회원가입</h4>
+        <form action="{{ url_for('main.register') }}" method="post" class="row g-3 m-3">
+            <div class="form-group col-6">
+                <label class="form-label" for="inputLabelId">아이디(이메일)</label>
+                <input type="email" name="user_id" id="inputLabelId" class="form-control" placeholder="elice@elice.com"
+                    value="{{ user_id }}" required />
+            </div>
+            <div class="form-group col-6">
+                <label class="form-label" for="inputLabelName">닉네임</label>
+                <input type="nickname" name="nickname" id="inputLabelName" class="form-control" placeholder="닉네임 입력"
+                value="{{ nickname }}" required />
+            </div>
+            <div class="form-group col-12">
+                <label class="form-label" for="inputLabelPw">비밀번호</label>
+                <input type="password" name="user_pw" id="inputLabelPw" class="form-control"
+                    placeholder="영문, 숫자, 특수문자를 조합하여 최소 8자 이상" value="{{ user_pw }}" required />
+            </div>
+            <div class="form-group col-12">
+                <label class="form-label" for="inputLabelPw2">비밀번호 확인</label>
+                <input type="password" name="user_pw2" id="inputLabelPw2" class="form-control" placeholder="비밀번호 확인"
+                value="{{ user_pw2 }}" required />
+            </div>
+            <div class="form-group col-12">
+                <label class="form-label" for="inputLabelAddress">주소</label>
+                <input type="text" name="address" id="inputLabelAddress" class="form-control" placeholder="주소 입력"
+                value="{{ address }}" required />
+            </div>
+            <div class="form-group col-12">
+                <label class="form-label" for="inputLabelTel">전화번호</label>
+                <input type="tel" name="telephone" id="inputLabelTel" class="form-control" placeholder="01012345678"
+                value="{{ telephone }}" required />
+            </div>
+            <div class='mt-3 d-md-flex justify-content-md-between'>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck" required>
+                    <label class="form-check-label" for="gridCheck">
+                        <small class='text-muted'>개인정보 수집 동의</small>
+                    </label>
+                </div>
+                <button class="btn btn-primary full-width" type="submit">회원가입</button>
+            </div>
+        </form>
     </div>
-    <div class="form-group">
-        <label>비밀번호
-            <input type="password" name="user_pw" class="form-control" placeholder="비밀번호 입력" required/></label>
-    </div>
-    <div class="form-group">
-        <label>비밀번호 재확인
-            <input type="password" name="user_pw2" class="form-control" placeholder="비밀번호 재확인" required/></label>
-    </div>
-    <div class="form-group">
-        <label>닉네임
-            <input type="nickname" name="nickname" class="form-control" placeholder="닉네임 입력" required/></label>
-    </div>
-    <div class="form-group">
-        <label>주소
-            <input type="text" name="address" class="form-control" placeholder="주소 입력" required /></label>
-    </div>
-    <div class="form-group">
-        <label>전화번호
-            <input type="tel" name="telephone" class="form-control" placeholder="전화번호 입력" required/></label>
-    </div>
-    <input class="btn btn-primary" type="submit" value="회원가입" />
-</form>
+    <div class='text-center mt-3'><small>이미 계정이 있으신가요? <a href="{{ url_for('main.login') }}">로그인</a></small></div>
+</div>
 {% endblock %}
