--- a/templates/detail.html
+++ b/templates/detail.html
@@ -10,8 +10,8 @@
                     class="img-fluid rounded-start" style="max-width:100%; max-height:100%;" alt="...">
             </div>
             <div class="col-md-8">
-                <div class="card-body">
-                    <h4 class="card-title">{{ book.book_name }}</h4>
+                <div class="card-body ms-3">
+                    <h4 class="card-title mb-3">{{ book.book_name }}</h4>
                     <p class="card-text"><small class="text-muted">저자 : {{ book.author }}</small></p>
                     <p class="card-text"><small class="text-muted">출판사 : {{ book.publisher }}</small></p>
                     <p class="card-text"><small class="text-muted">출판 날짜 : {{ book.publication_date }}</small></p>
