--- a/templates/main.html
+++ b/templates/main.html
@@ -17,7 +17,7 @@
     <h5>검색 결과<span class="badge rounded-pill bg-light text-dark">{{ book_list|count }}</span></h5>
     <div class="row row-cols-1 row-cols-md-4 g-4">
         {% for book in book_list%}
-        <div class="col">
+        <div class="col-xll-3">
             <div class="card h-100">
                 <div class="card-header">{{ loop.index }}</div>
                 <div class='card-img-top border-bottom' style="width: 300px; height:200px;text-align:center;">
