--- a/static/my_styles.css
+++ b/static/my_styles.css
@@ -27,3 +27,21 @@
     font-size: 18px;
     margin-bottom: 2px;
 }
+
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+#body-wrapper {
+    min-height: 100%;
+    position: relative;
+    padding-bottom: 75px;
+}
+
+footer {
+    position: absolute;  
+    bottom: 0;
+    height: 75px;
+}
