--- a/templates/register.html
+++ b/templates/register.html
@@ -9,12 +9,12 @@
             <div class="form-group col-6">
                 <label class="form-label" for="inputLabelId">아이디(이메일)</label>
                 <input type="email" name="user_id" id="inputLabelId" class="form-control" placeholder="elice@elice.com"
-                    value="{{ user_id }}" required />
+                    value="{{ user_id }}" autocomplete='off' required />
             </div>
             <div class="form-group col-6">
                 <label class="form-label" for="inputLabelName">닉네임</label>
                 <input type="nickname" name="nickname" id="inputLabelName" class="form-control" placeholder="닉네임 입력"
-                value="{{ nickname }}" required />
+                value="{{ nickname }}" autocomplete='off' required />
             </div>
             <div class="form-group col-12">
                 <label class="form-label" for="inputLabelPw">비밀번호</label>
@@ -29,12 +29,12 @@
             <div class="form-group col-12">
                 <label class="form-label" for="inputLabelAddress">주소</label>
                 <input type="text" name="address" id="inputLabelAddress" class="form-control" placeholder="주소 입력"
-                value="{{ address }}" required />
+                value="{{ address }}" autocomplete='off' required />
             </div>
             <div class="form-group col-12">
                 <label class="form-label" for="inputLabelTel">전화번호</label>
                 <input type="tel" name="telephone" id="inputLabelTel" class="form-control" placeholder="01012345678"
-                value="{{ telephone }}" required />
+                value="{{ telephone }}" autocomplete='off' required />
             </div>
             <div class='mt-3 d-md-flex justify-content-md-between'>
                 <div class="form-check">
