--- a/templates/return.html
+++ b/templates/return.html
@@ -4,7 +4,9 @@
 {% block page_content %}
 <div class="container">
     <div class="border-bottom mb-2">
-        <h4 class="mb-3">반납하기</h4>
+        <h4 class="mb-3">반납하기
+            {% if user.late_fee != 0 %}<small>(연체료 : ￦{{ user.late_fee }}원)</small>{% endif %}</h4>
+        {% if user.late_fee != 0 %}<p><small class='text-muted'>※ 연체료를 지불하지 않을 시 대출이 불가능합니다. 도서관에 방문하여 연체료를 지불해주세요.</small></p>{% endif %}
     </div>
     {% if not items %}
     <p class='text-center mt-3'>반납할 책이 없습니다</p>
@@ -13,15 +15,20 @@
     <form action="{{ url_for('main.return_click', book_id=item.book_id) }}" method='post'>
         <div class="card mb-3">
             <div class="row g-0">
-                <div class="col-md-4 border-end" style="width: 150px; height:150px;text-align:center;">
+                <div class="col-md-4 border-end" style="width: 200px; height:200px;text-align:center;">
                     <img src="{{ url_for('static', filename='/book_img/{}.jpg'.format(item.book_id)) }}"
                         class="img-fluid rounded-start" style="max-width:100%; max-height:100%;" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
                         <h5 class="card-title">{{ item.book_name }}</h5>
-                        <p class="card-text"><small class="text-muted">{{ item.rental_date }}~</small></p>
-                        <input class="btn btn-primary" type="submit" onclick="return confirm('반납하시겠습니까?');" value="반납하기">
+                        <p class="card-text"><small class="text-muted">{{ item.rental_date }} ~ {{ item.return_due_date
+                                }}</small></p>
+                        {% if item.return_due_date < today %} <p class="card-text"><small class="text-danger">※반납기한을
+                                초과하여 (연체일 x 100)원의 연체료가 부과됩니다. 먼저 책을 반납해주세요.</small></p>
+                            {% endif %}
+                            <input class="btn btn-primary" type="submit" onclick="return confirm('반납하시겠습니까?');"
+                                value="반납하기">
                     </div>
                 </div>
             </div>
